name:                hoag
version:             0.1.0.0
synopsis:            Higher Order Attribute Grammars EDSL for building Data Flow Graphs
description:         This package provides an EDSL based on higher-order attribute grammars for building data flow graphs
homepage:            https://github.com/amiddelk/hoag#readme
license:             BSD3
license-file:        LICENSE
author:              Arie Middelkoop
maintainer:          amiddelk@gmail.com
copyright:           2017 Arie Middelkoop
category:            Attribute Grammars
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC==8.0.2, GHC==8.2.1
stability:           experimental

library
  hs-source-dirs:      src
  exposed-modules:     Control.HOAG,
                       Control.MonadFlow,
                       Data.Type.Dict,
                       Data.Type.Assocs
  build-depends:       base >= 4.7 && < 5,
                       text == 1.2.*,
                       containers == 0.5.*,
                       unordered-containers == 0.2.*,
                       mtl == 2.2.*,
                       hashable == 1.2.*,
                       template-haskell >= 2.11 && < 2.13
  default-language:    Haskell2010

test-suite hoag-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5,
                       QuickCheck >= 2.9 && < 2.11,
                       mtl == 2.2.*,
                       hoag
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/amiddelk/hoag
